style: fix Hero video alignment and mobile responsive height

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>site-bom</title>
+    <title>Pedrovysk | Master The Creative Future</title>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Domine a arte da criação com Inteligência Artificial. Cursos completos de Vídeo, Imagem, Clones e Upscaling com Pedrovysk." />
+    <meta name="keywords" content="IA, Inteligência Artificial, Curso IA, Pedrovysk, Vídeo IA, Midjourney, Pika Labs, RunwayML, Stable Diffusion" />
+    <meta name="author" content="Pedrovysk" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pedrovysk.com/" />
+    <meta property="og:title" content="Pedrovysk | Master The Creative Future" />
+    <meta property="og:description" content="Domine a arte da criação com Inteligência Artificial. Transforme seu futuro criativo hoje." />
+    <meta property="og:image" content="https://pedrovysk.com/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://pedrovysk.com/" />
+    <meta property="twitter:title" content="Pedrovysk | Master The Creative Future" />
+    <meta property="twitter:description" content="Domine a arte da criação com Inteligência Artificial." />
+    <meta property="twitter:image" content="https://pedrovysk.com/og-image.jpg" />
   </head>
   <body>
     <div id="root"></div>
