chore: optimize performance with lazy loading and asset preloading

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pedrovysk | Soluções Digitais & IA</title>
 
+  <!-- Preload Critical Fonts -->
+  <link rel="preload" href="https://framerusercontent.com/third-party-assets/fontshare/wf/TTX2Z3BF3P6Y5BQT3IV2VNOK6FL22KUT/7QYRJOI3JIMYHGY6CH7SOIFRQLZOLNJ6/KFIAZD4RUMEZIYV6FQ3T3GP5PDBDB6JY.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="https://framerusercontent.com/third-party-assets/fontshare/wf/J6PPRPKWXDUIYA47IXLEQB4R4OPVYDQH/N2ZXAXWEHVMLISD2TIXJC7EF4GOY43L4/NXM4Z4TDCMYWBZ7AVI2N6DQ5VMWNENMU.woff2" as="font" type="font/woff2" crossorigin>
+
   <!-- SEO Meta Tags -->
   <meta name="description"
     content="Especialista em Desenvolvimento de Sites, Landing Pages de Alta Conversão, Lojas Virtuais e Sistemas com Inteligência Artificial. +8 anos de experiência em Marketing e Design." />
